@@ -1,0 +1,30 @@
+server:
+	verbosity: 7
+	# num-threads: 1
+	interface: 127.0.0.1
+	port: @PORT@
+	use-syslog: no
+	directory: ""
+	pidfile: "unbound.pid"
+	chroot: ""
+	username: ""
+	module-config: "respip iterator"
+	log-time-ascii: yes
+
+remote-control:
+	control-enable: yes
+	control-interface: @CONTROL_PATH@/controlpipe.@CONTROL_PID@
+	control-use-cert: no
+
+rpz:
+	name: "rpz.example.com"
+	zonefile: "rpz.example.com.zone"
+	rpz-action-override: cname
+	rpz-cname-override: "www.example.org"
+	rpz-log: yes
+	rpz-log-name: "example policy"
+
+auth-zone:
+	name: "example.org"
+	zonefile: "example.org.zone"
+	for-upstream: yes
